--- a/contact.html
+++ b/contact.html
@@ -73,25 +73,7 @@
 
 
 	<div class="form-container">
-		<form action="form.php">
-				<div class="row">
-					<div class="col-25">
-						<label for="fname">First Name</label>
-					</div>
-					<div class="col-75">
-						<input type="text" id="fname" name="firstname" placeholder="">
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col-25">
-						<label for="lname">Last Name</label>
-					</div>
-					<div class="col-75">
-						<input type="text" id="lname" name="lastname" placeholder="">
-					</div>
-				</div>
-
+		<form action="mailto:me@micaheldemar.co" method="GET">
 				<div class="row">
 					<div class="col-25">
 						<label for="email">Email</label>
@@ -119,12 +101,12 @@
 						<label for="message">Message</label>
 					</div>
 					<div class="col-75">
-						<textarea id="message" name="message" placeholder="Write your message here!" style="height:200px"></textarea>
+						<textarea id="message" name="body" placeholder="Write your message here!" style="height:200px"></textarea>
 					</div>
 				</div>
 
 				<div style="float:right" class="row">
-					<input class="submit" type="submit" value="Submit">
+					<input class="submit" type="submit" value="Send">
 				</div>
 
 		</form>
