Update contact.html (mailto)

--- a/contact.html
+++ b/contact.html
@@ -73,13 +73,14 @@
 
 
 	<div class="form-container">
-		<form action="mailto:me@micaheldemar.co" method="GET">
+		<form action="mailto:me@michaeldemar.co" method="post" enctype="text/plain">
+
 				<div class="row">
 					<div class="col-25">
 						<label for="email">Email</label>
 					</div>
 					<div class="col-75">
-						<input type="text" id="email" name="email" placeholder="joe@example.com">
+						<input type="email" id="email" name="cc" placeholder="joe@example.com">
 					</div>
 				</div>
 
@@ -101,7 +102,7 @@
 						<label for="message">Message</label>
 					</div>
 					<div class="col-75">
-						<textarea id="message" name="body" placeholder="Write your message here!" style="height:200px"></textarea>
+						<textarea id="body" name="body" placeholder="Write your message here!" style="height:200px"></textarea>
 					</div>
 				</div>
 
