Removing contact form
Mailto links are outdated & don't work; PHP script doesn't run in Github pages.

--- a/contact.html
+++ b/contact.html
@@ -72,46 +72,9 @@
         </div>
 
 
-	<div class="form-container">
-		<form action="mailto:me@michaeldemar.co" method="post" enctype="text/plain">
-
-				<div class="row">
-					<div class="col-25">
-						<label for="email">Email</label>
-					</div>
-					<div class="col-75">
-						<input type="email" id="email" name="cc" placeholder="joe@example.com">
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col-25">
-						<label for="subject">Subject</label>
-					</div>
-					<div class="col-75">
-						<select id="subject" name="subject">
-							<option value="tutoring">Tutoring</option>
-							<option value="graphics">Graphic Design</option>
-							<option value="general">General Inquiry</option>
-						</select>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col-25">
-						<label for="message">Message</label>
-					</div>
-					<div class="col-75">
-						<textarea id="body" name="body" placeholder="Write your message here!" style="height:200px"></textarea>
-					</div>
-				</div>
-
-				<div style="float:right" class="row">
-					<input class="submit" type="submit" value="Send">
-				</div>
-
-		</form>
-	</div>
+    <div class="container-fluid">
+      <p>Unfortunately, I can't put a form directly on my website. You can contact me via email at me@michaeldemar.co or through any of my social media accounts; links are available my header. Also, if you're contacting me about tutoring, graphic design, or other work, please be sure to include that in the subject!</p>
+    </div>
 
 
 
