Adding and reformatting experience page

--- a/experience.html
+++ b/experience.html
@@ -74,18 +74,37 @@
         <div class="container-fluid" id="leadership">
           <h3>Leadership</h3>
           <h6>EXERPERIENCED LEADER GUIDED UNDER QUALITY MENTORSHIP.</h6>
-          <ul>
-            <li>Director of McNally Pancake Breakfast 2016, our Junior High Leadership Conference 2016/17, and ‘Tiger Squad (2017),’ a grade-ten orientation program. Moreover, I was co-director of Bike-a-Thon and ran a cultural booth at our Heritage Festival.</li>
-            <li>Initiative work includes time with Youth Engagement Focus Group (YEFG) team, a student voice initiative that works with McNally's administration, McNally Book Club, MASSIVE Volunteering Club, and #NOGOODWAY campaign.</li>
-            <li>Member of Global Opportunities Club, Science Olympics team (2016), Speech and Debate club, soccer team, and volleyball team. For speech and debate, won best speaker at UofA HSMUN 2018, bronze medal at OBA/OJEN Mock Trials, and have competed in numerous other tournaments.</li>
-            <li>Director of student programming for the Canadian Student Leadership Conference 2018, to be hosted here in Edmonton, Student Senator for McNally, and City of Edmonton Youth Councillor.</li>
-            <li>Program coordinator for SUNIA, a week-long model United Nations summer camp that takes place in Nordegg every August.</li>
-            <li>Published in Polar Expressions writing competitions and in the Edmonton Journal for CAPPIES. Samples of writing also available on my blog.</li>
+          <ul class="resume">
+            <li>
+            <span>SUNIA Marketing Director (January 2018 — Present)</span>
+            <p>Current Marketing director for the Seminar on United Nations and International Affairs (SUNIA), a week-long model United Nations summer camp that takes place in Nordegg, Alberta every August. SUNIA enables over 150 youth from across North America to explore the world of international affairs and learn how to make an impact on the the world around them. Learn more about SUNIA <a href="https://www.sunia.ca/" target="_blank">here</a>.</p>
+            </li>
+
+            <li>
+            <span>Canadian Student Leadership Conference (CSLC) 2018 Executive Director (December 2016 — October 2018)</span>
+            <p>For CSLC 2018, I was the director of student programming. My primary responsibility was to oversee the development of program components across the five day conference. I also worked to solidify the conference values, trying the program components together and leaving delegates with a unified message. I had to maintain both vertical and horizontal communication; that is, both within the five collaborating high schools and between them. The task was easily my most difficult and rewarding leadership role, and I am grateful to have been able to impact the delegates who came. Learn more about CSLC <a href="http://cslc2018.studentleadership.ca/" target="_blank">here</a>.</p>
+            </li>
+
+            <li>
+            <span>Edmonton Public School Board Student Senator (September 2017 — June 2019)</span>
+            <p>I have served on the EPSB Student Senate for two-terms, engaging students across the district on issues that matter to them. Through their feedback, we have and continue to pursue substantive project work to improve education. In my first year, I was responsible for the graphic design of brochures helping with time management. I am now the vice-chair of the Senate, responsible for aiding meetings and directly supporting the chair. I work directly with students to influence policy that affects their day-to-day student experience, and am privileged to be able act as their voice to the Board of Trustees. View the brochures here: <a href="/Documents/sstm-findingtime.pdf" target="_blank">Finding Time</a>, <a href="/Documents/sstm-usingtime.pdf" target="_blank">Using Time</a>, <a href="/Documents/sstm-yourtime.pdf" target="_blank">Your Time</a>. Learn more about the Student Senate <a href="https://www.epsb.ca/ourdistrict/board/studentsenate/" target="_blank">here</a>.</p>
+            </li>
+
+            <li>
+            <span>City of Edmonton Youth Councillor (September 2018 — Present)</span>
+            <p>Recently, I have been selected to serve as a committee member on the City of Edmonton Youth Council. I have already been able to engage with youth in Edmonton and better understand what direction they would like to see our city council take. I have assisted in the drafting of memos, reports, and presentations to our city council. Moreover, I have collaborated on many projects, including the CEYC Awards, a first-of-its-kind event to celebrate the youth of our city and recognize their accomplishments. Learn more about the City of Edmonton Youth Council <a href="https://www.ceyc.ca/" target="_blank">here</a>.</p>
+            </li>
+
+            <li>
+            <span>Initiative Work (varies)</span>
+            <p>Initiative work includes time with Youth Engagement Focus Group (YEFG) team, a student voice initiative that works with McNally's administration; McNally Book Club; MASSIVE Volunteering Club; and #NOGOODWAY campaign. Read more about Massive Volunteering <a href="https://sites.google.com/share.epsb.ca/massivevolunteering/home" target="_blank">here</a>. </p>
+            </li>
           </ul>
+
           <h6>SKILLS</h6>
-          <ul>
+          <ul class="skills">
             <li>Confident communicator, both verbal and written;</li>
-            <li>Able to either within teams or indepently;</li>
+            <li>Able to either within teams or independently;</li>
             <li>Diligent and focused;</li>
             <li>Strives for integrity and humility.</li>
           </ul>
@@ -96,17 +115,27 @@
         <div class="container-fluid" id="academia">
           <h3>Academia</h3>
           <h6>PASSIONATE LIFELONG LEARNER.</h6>
-          <ul>
-            <li>International Baccalaureate student at McNally high school entering grade twelve year.</li>
-            <li>Maintained an average of 95%+ throughout junior high and high school.</li>
-            <li>Pursue coding projects available on Github.</li>
-            <li>Competed in numerous mathematics competitions.</li>
-            <li>Particularly interested in the intersection of STEM and politics.</li>
+          <ul class="resume">
+            <li>
+            <span>Achievements & Awards</span>
+            <p>International Baccalaureate student at McNally high school in grade twelve year. Maintained an average of 95%+ throughout junior high and high school. Competed in numerous mathematics competitions & active member of homework club at McNally, assisting my peers with math homework. Tutor as part of McNally Peer Tutoring Program; to date, I have helped clients, in ESL classes, Physics SL (IB), and Mathematics 30-1, 20-1, and SL. Learn more about tutoring <a href="#">here.</a> For prospective tutoring clients, my transcript can be made available upon request. Contact me at me@michaeldemar.co with "Tutoring" in the subject line! Activities and socities at McNally incluide: Global Opportunities Club, Science Olympics team (2016), Speech and Debate club, soccer team, and volleyball team. For speech and debate, won best speaker at UofA HSMUN 2018, bronze medal at OBA/OJEN Mock Trials, and have competed in numerous other tournaments.</p>
+            </li>
+
+            <li>
+            <span>Writing</span>
+            <p>Published in Polar Expressions writing competitions and in the Edmonton Journal as a part of the Cappies Critic Program. Cappies reviews available <a href="https://edmontonjournal.com/entertainment/theatre/cappies-reviews-the-little-mermaid-3" target="_blank">here</a>, and <a href="https://edmontonjournal.com/entertainment/theatre/cappies-reviews-a-few-good-men" target="_blank">here</a>. Samples of writing also available on my <a href="https://blog.michaeldemar.co">blog.</a></p>
+            </li>
+
+            <li>
+            <span>Programming</span>
+            <p>Fluency in Python and Java. Built simple HTML and CSS (Bootstrap) with Jekyll blog on Github pages. Build and maintain code for registrants for SUNIA. Currently building website to showcase volunteer experiences for client. All coding projects available on my Github. Projects include: hangman in Python, student gradebook application in Java, tic-tac-toe game made in Processing Java.</p>
+            </li>
+
           </ul>
           <h6>SKILLS</h6>
-          <ul>
+          <ul class="skills">
             <li>Numeracy skills;</li>
-            <li>Capable writer;</li>
+            <li>Particularly interested in the intersection of STEM and politics, with a focus on big data;</li>
             <li>Passionate about learning and able to pick up new skills quickly.</li>
           </ul>
         </div>
@@ -116,18 +145,19 @@
         <div class="container-fluid" id="graphicdesign">
           <h3>Graphic Design</h3>
           <h6>CAPABLE GRAPHIC DESIGNER THAT LEARNED BY DOING.</h6>
-          <ul>
-            <li>First became interested in graphic design after taking a mix of visual communications and coding classes in junior high, working with Photoshop and Illustrator to create simple projects.</li>
-            <li>In high school, I found infinite room to play, design, and flourish as a designer. I created:
-              <ul>
-                <li>advertisements for our school’s Pancake Breakfast,</li>
-                <li>branding for our Bike-a-Thon, Junior High Leadership Conference (in which I worked with Karen Schiltz, graphic designer for Classic Landscapes), Heritage Festival,</li>
-                <li>and for my initiatives, such as our Book Club, our volunteering club, MASSIVE, and my personal website. I even got approached by our school’s media team to create a logo, which is now used by our photograph teacher as an email signature.</li>
-              </ul>
+          <ul class="resume">
+
+            <li>
+            <span>Freelance</span>
+            <p>First became interested in graphic design after taking a mix of visual communications and coding classes in junior high, working with Photoshop and Illustrator to create simple projects. In high school, I found infinite room to play, design, and flourish as a designer. I created: advertisements for our school’s Pancake Breakfast, branding for our Bike-a-Thon, Junior High Leadership Conference (in which I worked with Karen Schiltz, graphic designer for Classic Landscapes), Heritage Festival, and for my initiatives, such as our Book Club, our volunteering club, MASSIVE, and my personal website. I even got approached by our school’s media team to create a logo, which is now used by our photograph teacher as an email signature.</p>
             </li>
-            <li>Assisted with branding for Canadian Student Leadership Conference (CSLC) 2018. I worked with a talented graphic designer contracted by Harry Ainlay who walked me through the design process. He worked with my logo designs when eventually drafting our final conference branding.</li>
-            <li>For Student Senate, I was a member of the ‘Time Management’ committee, whose primary focus was creating a resource for students to combat procrastination, for which we decided brochures were best suited. I took on the responsbility of designing the brochures. I used Illustrator, Photoshop, and InDesign to create them. Operating under certain constraints, such as a maximum of three colors, and an amount of content to fit, the brochures were complete. We printed off 600 copies for each school in EPSB.</li>
+
+            <li>
+            <span>Client</span>
+            <p>Assisted with branding for Canadian Student Leadership Conference (CSLC) 2018. I worked with a talented graphic designer contracted by Harry Ainlay who walked me through the design process. He worked with my logo designs when eventually drafting our final conference branding. For Student Senate, I was a member of the ‘Time Management’ committee, whose primary focus was creating a resource for students to combat procrastination, for which we decided brochures were best suited. I took on the responsbility of designing the brochures. I used Illustrator, Photoshop, and InDesign to create them. Operating under certain constraints, such as a maximum of three colors, and an amount of content to fit, the brochures were complete. We printed off 600 copies for each school in EPSB. This year, I created the playbill for our school's mainstage production, and am currently working on creating the program for our graduation ceremony.</p>
+            </li>
           </ul>
+
           <h6>SKILLS</h6>
           <ul>
             <li>Illustrator, 5 years;</li>
