Update main page & experience page

--- a/index.html
+++ b/index.html
@@ -81,11 +81,9 @@
     <div class="container-fluid" id="welcome-panel">
       <h3 id="welcome" style="margin-top:50px;margin-bottom:50px;letter-spacing: 5px;">
         WELCOME!</h3>
-        <p id="welcome">Hi, my name is Michael DeMarco. I’m a student, creator, and free-thinker constantly working to achieve my
-          four main goals: impact, influence, innovate, and inspire. Join me on my journey by
-          following me here on my blog and following me on social media @michaelfromyeg on <a href="https://www.facebook.com/michaelfromyeg">Facebook</a>,
-          <a href="https://www.instagram.com/michaelfromyeg">Instagram</a>, and <a href="https://twitter.com/michaelfromyeg">Twitter</a>. Also, this whole website? You can see
-          the code for it on <a href="https://github.com/michaelfromyeg">Github</a>.</p>
+        <p id="welcome">Hi, my name is Michael DeMarco. I’m a student at McNally high school working to achieve my four main goals: impact, influence, innovate, and inspire. Join me on my journey by following me here on my blog and following me on social media @michaelfromyeg on <a href="https://www.facebook.com/michaelfromyeg">Facebook</a>,
+        <a href="https://www.instagram.com/michaelfromyeg">Instagram</a>, and <a href="https://twitter.com/michaelfromyeg">Twitter</a>. Also, this whole website? You can see 
+        the code for it on <a href="https://github.com/michaelfromyeg">Github</a>.</p>
         </div>
 
         <div class="container-fluid" style="margin-bottom:0px;" id="footer">
