--- a/experience.html
+++ b/experience.html
@@ -97,7 +97,7 @@
 
             <li>
             <span>Edmonton Public School Board Student Senator (September 2017 — June 2019)</span>
-            <p>I have served on the EPSB Student Senate for two-terms, engaging students across the district on issues that matter to them. Through their feedback, we have and continue to pursue substantive project work to improve education. In my first year, I was responsible for the graphic design of brochures helping with time management. I am now the vice-chair of the Senate, responsible for aiding meetings and directly supporting the chair. I work directly with students to influence policy that affects their day-to-day student experience, and am privileged to be able act as their voice to the Board of Trustees. View the brochures here: <a href="/Documents/sstm-findingtime.pdf" target="_blank">Finding Time</a>, <a href="/Documents/sstm-usingtime.pdf" target="_blank">Using Time</a>, <a href="/Documents/sstm-yourtime.pdf" target="_blank">Your Time</a>. Learn more about the Student Senate <a href="https://www.epsb.ca/ourdistrict/board/studentsenate/" target="_blank">here</a>.</p>
+            <p>I have served on the EPSB Student Senate for two-terms, engaging students across the district on issues that matter to them. Through their feedback, we have and continue to pursue substantive project work to improve education. In my first year, I was responsible for the graphic design of brochures helping with time management. I am now the vice-chair of the Senate, responsible for aiding meetings and directly supporting the chair. I work directly with students to influence policy that affects their day-to-day student experience, and am privileged to be able act as their voice to the Board of Trustees. I also work on media production related to our district; one example video is viewable <a href="https://www.youtube.com/watch?v=LAI8UA-_5ms" target="_blank">here</a>. View the brochures here: <a href="/Documents/sstm-findingtime.pdf" target="_blank">Finding Time</a>, <a href="/Documents/sstm-usingtime.pdf" target="_blank">Using Time</a>, <a href="/Documents/sstm-yourtime.pdf" target="_blank">Your Time</a>. Learn more about the Student Senate <a href="https://www.epsb.ca/ourdistrict/board/studentsenate/" target="_blank">here</a>.</p>
             </li>
 
             <li>
@@ -107,7 +107,7 @@
 
             <li>
             <span>Initiative Work (varies)</span>
-            <p>Initiative work includes time with Youth Engagement Focus Group (YEFG) team, a student voice initiative that works with McNally's administration; McNally Book Club; MASSIVE Volunteering Club; and #NOGOODWAY campaign. Read more about Massive Volunteering <a href="https://sites.google.com/share.epsb.ca/massivevolunteering/home" target="_blank">here</a>. </p>
+            <p>Initiative work includes time with Youth Engagement Focus Group (YEFG) team, a student voice initiative that works with McNally's administration; McNally Book Club; MASSIVE Volunteering Club; and #NOGOODWAY campaign. Read more about Massive Volunteering <a href="https://sites.google.com/share.epsb.ca/massivevolunteering/home" target="_blank">here</a>.</p>
             </li>
           </ul>
 
@@ -140,8 +140,8 @@
             <span>Programming</span>
             <p>Fluency in Python and Java. Built simple HTML and CSS (Bootstrap) with Jekyll blog on Github pages. Build and maintain code for registrants for SUNIA. Currently building website to showcase volunteer experiences for client. All coding projects available on my Github. Projects include: hangman in Python, student gradebook application in Java, tic-tac-toe game made in Processing Java.</p>
             </li>
-
           </ul>
+
           <h6>SKILLS</h6>
           <ul class="skills">
             <li>Numeracy skills;</li>
@@ -166,6 +166,7 @@
             <span>Client</span>
             <p>Assisted with branding for Canadian Student Leadership Conference (CSLC) 2018. I worked with a talented graphic designer contracted by Harry Ainlay who walked me through the design process. He worked with my logo designs when eventually drafting our final conference branding. For Student Senate, I was a member of the ‘Time Management’ committee, whose primary focus was creating a resource for students to combat procrastination, for which we decided brochures were best suited. I took on the responsbility of designing the brochures. I used Illustrator, Photoshop, and InDesign to create them. Operating under certain constraints, such as a maximum of three colors, and an amount of content to fit, the brochures were complete. We printed off 600 copies for each school in EPSB. This year, I created the playbill for our school's mainstage production, and am currently working on creating the program for our graduation ceremony.</p>
             </li>
+
           </ul>
 
           <h6>SKILLS</h6>
