Changing about page title

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: default
 title: About
 ---
-<h1 class="title">{{ "This is the about page." | capitalize }}</h1>
+<h1 class="title">About me</h1>
 
 <h6>My latest from Instagram</h6>
 <div id="instafeed"></div>
