Adding Behance profile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Home
 
 <p style="padding-top:15px;"><strong>I'm a passionate communicator.</strong> You can check out my blog for some miscellanious thoughts on what's happening in our world today. I also do a fair amount of public speaking. Some of it's on my YouTube channel, with more to come in the near future!</p>
 
-<p style="padding-top:15px;"><strong>I'm no artist, but</strong> I'm crazy about graphic design. You can check out some of my favourite pieces I've made on my Behance profile. Looking to have some work done? Get in touch at me@michaeldemar.co.</p>
+<p style="padding-top:15px;"><strong>I'm no artist, but</strong> I'm crazy about graphic design. You can check out some of my favourite pieces I've made on my <a href="https://www.behance.net/michaelfromyeg/" target="_blank">Behance profile</a>. Looking to have some work done? Get in touch at me@michaeldemar.co.</p>
 
 <p style="padding-top:15px;"><strong>I love to teach.</strong> I'm an experienced tutor, instructing everything from programming to English as a Second Language and everything in between. Know someone looking for a tutor or need one yourself? Learn more here.</p>
 
