Updating about page

--- a/about.html
+++ b/about.html
@@ -4,5 +4,15 @@ title: About
 ---
 <h1 class="title">About me</h1>
 
+<p>Hi! I’m Michael. Welcome to my site. Here’s a little about me.</p>
+
+<p>I’m a 17 year-old university student attending the University of British Columbia. I plan to pursue studies in computing science. I previously attended McNally High School, Ottewell Junior High, and, a number of moons ago Clara Tyner Elementary. Throughout school I’ve strived to find the balance between applying myself academically and being an active citizen in my community.</p> 
+
+<p>That’s led to some pretty neat results. I’ve had the privilege of leading a nationwide leadership conference, representing youth on both Edmonton’s Youth Council and the public school district’s Student Senate, and volunteering with a not-for-profit summer camp in a variety of roles. When I’m not busy performing the juggling act that is my life, I enjoy making music with either a saxophone or piano, kicking a soccer ball around, or reading.</p>
+
+<p>At the end of the day, my goal is to make an impact on the world. For the longest time I was convinced I would do that as a lawyer. Eventually (and almost overnight) I changed paths and am now pursuing computing science. I want to be a part of developing the technology required to fix our shaky planet. Climate change, public discourse, and access to technology are just some of the issues I hope to tackle as best I can behind a mouse and keyboard.</p>
+
+<p>So that was a bit about me. Now, I’d love to hear your story! Get in touch at me@michaeldemar.co.</p><br>
+
 <h6>My latest from Instagram</h6>
 <div id="instafeed"></div>
