--- a/index.html
+++ b/index.html
@@ -3,20 +3,59 @@ layout: default
 title: Home
 ---
 
-<h1 style="text-align: center;"><strong>Welcome!</strong></h1>
+<h1 style="text-align: center"><strong>Welcome!</strong></h1>
 
-<p style="padding-top:15px;"><strong>My name is Michael,</strong> and I'm a 17 year-old aspiring computer scientist and jack-of-all something. I'm passionate about solving problems, large or small, software or otherwise.</p>
+<p style="padding-top: 15px">
+    <strong>My name is Michael,</strong> and I'm a 17 year-old aspiring computer
+    scientist and jack-of-all something. I'm passionate about solving problems,
+    large or small, software or otherwise.
+</p>
 
-<p style="padding-top:15px;"><strong>I'm about to begin studying at the University of British Columbia</strong> this fall. I was born and raised in Edmonton, and will be moving to Vancouver in late August of 2019.</p>
+<p style="padding-top: 15px">
+    <strong
+        >I'm about to begin studying at the University of British
+        Columbia</strong
+    >
+    this fall. I was born and raised in Edmonton, and will be moving to
+    Vancouver in late August of 2019.
+</p>
 
-<p style="padding-top:15px;"><strong>I've loved working with technology</strong> since a young age. Since starting out on Lego Mindstorms many years ago, I've since worked with web development frameworks like Flask, created apps in Java, and dabbled in competitive programming. My project work is available on my Github page.</p>
+<p style="padding-top: 15px">
+    <strong>I've loved working with technology</strong> since a young age. Since
+    starting out on Lego Mindstorms many years ago, I've since worked with web
+    development frameworks like Flask, created apps in Java, and dabbled in
+    competitive programming. My project work is available on my Github page.
+</p>
 
-<p style="padding-top:15px;"><strong>I'm a passionate communicator.</strong> You can check out my blog for some miscellanious thoughts on what's happening in our world today. I also do a fair amount of public speaking. Some of it's on my YouTube channel, with more to come in the near future!</p>
+<p style="padding-top: 15px">
+    <strong>I'm a passionate communicator.</strong> You can check out my blog
+    for some miscellanious thoughts on what's happening in our world today. I
+    also do a fair amount of public speaking. Some of it's on my YouTube
+    channel, with more to come in the near future!
+</p>
 
-<p style="padding-top:15px;"><strong>I'm no artist, but</strong> I'm crazy about graphic design. You can check out some of my favourite pieces I've made on my <a href="https://www.behance.net/michaelfromyeg/" target="_blank">Behance profile</a>. Looking to have some work done? Get in touch at me@michaeldemar.co.</p>
+<p style="padding-top: 15px">
+    <strong>I'm no artist, but</strong> I'm crazy about graphic design. You can
+    check out some of my favourite pieces I've made on my
+    <a href="https://www.behance.net/michaelfromyeg/" target="_blank"
+        >Behance profile</a
+    >. Looking to have some work done? Get in touch at me@michaeldemar.co.
+</p>
 
-<p style="padding-top:15px;"><strong>I love to teach.</strong> I'm an experienced tutor, instructing everything from programming to English as a Second Language and everything in between. Know someone looking for a tutor or need one yourself? Learn more here.</p>
+<p style="padding-top: 15px">
+    <strong>I love to teach.</strong> I'm an experienced tutor, instructing
+    everything from programming to English as a Second Language and everything
+    in between. Know someone looking for a tutor or need one yourself? Learn
+    more here.
+</p>
 
-<p style="padding-top:15px;"><strong>I get involved.</strong> From non-for-profits to initiatives I've founded, I've worked to create a ripple on a number of issues important to me while growing as a leader meanwhile. Learn more.</p>
+<p style="padding-top: 15px">
+    <strong>I get involved.</strong> From non-for-profits to initiatives I've
+    founded, I've worked to create a ripple on a number of issues important to
+    me while growing as a leader meanwhile. Learn more.
+</p>
 
-<p style="padding-top:15px;"><strong>And I want to get to know you!</strong> Reach out on any of the social links on this page. I don't bite!</p>
+<p style="padding-top: 15px">
+    <strong>And I want to get to know you!</strong> Reach out on any of the
+    social links on this page. I don't bite!
+</p>
